// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="textinput"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {},
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {},
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            flexWrap="wrap"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.subdued.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="bold"
              lineHeight={50}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(217, 18%, 45%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "700",
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.normal.lowContrast"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(217, 56%, 17%, 1)",
                      "fontFamily": "Lato",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        isTextArea={false}
        style={
          [
            {},
            {},
          ]
        }
      >
        <TextInput
          accessibilityDescribedBy=""
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityState={
            {
              "disabled": false,
              "expanded": undefined,
            }
          }
          accessible={true}
          autoCompleteType="off"
          data-blade-component="styled-base-input"
          editable={true}
          hasTags={false}
          id="textinput-1-input-2"
          interactionElement={null}
          isFocused={false}
          isTextArea={false}
          keyboardType="default"
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="default"
          secureTextEntry={false}
          style={
            [
              {
                "height": 36,
                "textAlignVertical": "top",
              },
            ]
          }
          textContentType="none"
        />
        <View
          style={
            [
              {
                "backgroundColor": "hsla(218, 89%, 51%, 1)",
                "bottom": 0,
                "height": 1,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
              },
              {
                "opacity": undefined,
                "width": "undefined%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with icon, prefix, suffix 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="textinput"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {},
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {},
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            flexWrap="wrap"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.subdued.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="bold"
              lineHeight={50}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(217, 18%, 45%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "700",
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter company website
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.normal.lowContrast"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(217, 56%, 17%, 1)",
                      "fontFamily": "Lato",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        isTextArea={false}
        style={
          [
            {},
            {},
          ]
        }
      >
        <View
          alignItems="center"
          alignSelf="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            display="flex"
            style={
              [
                {},
              ]
            }
          >
            <RNSVGSvgView
              accessibilityElementsHidden={true}
              align="xMidYMid"
              bbHeight="16px"
              bbWidth="16px"
              data-blade-component="icon"
              fill="none"
              focusable={false}
              height="16px"
              importantForAccessibility="no-hide-descendants"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width="16px"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                  fill={4282603381}
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                  fill={4282603381}
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  clipRule={0}
                  d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                  fill={4282603381}
                  fillRule={0}
                  propList={
                    [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.subtle.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              https://
            </Text>
          </View>
        </View>
        <TextInput
          accessibilityDescribedBy=""
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityState={
            {
              "disabled": false,
              "expanded": undefined,
            }
          }
          accessible={true}
          autoCapitalize="none"
          autoCompleteType="off"
          data-blade-component="styled-base-input"
          editable={true}
          hasTags={false}
          id="textinput-31-input-32"
          interactionElement={null}
          isFocused={false}
          isTextArea={false}
          keyboardType="url"
          leadingIcon={[Function]}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSubmitEditing={[Function]}
          placeholder="something"
          prefix="https://"
          returnKeyType="go"
          secureTextEntry={false}
          style={
            [
              {
                "height": 36,
                "textAlignVertical": "top",
              },
            ]
          }
          suffix=".com"
          textContentType="none"
        />
        <View
          alignItems="center"
          alignSelf="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          style={
            [
              {},
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {},
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.subtle.lowContrast"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(216, 27%, 36%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              .com
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "hsla(218, 89%, 51%, 1)",
                "bottom": 0,
                "height": 1,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
              },
              {
                "opacity": undefined,
                "width": "undefined%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;
